# llm_from_scratch

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  traingpt.py  trainsft.py
llm_from_scratch/data/: gpt_dataset.py  prepare_indic_instruct_data.py  prepare_pretraining_data.py  sft_dataset.py  utils.py  validate_tokenized_data.py
llm_from_scratch/gpt/model/: blocks.py  custom_gpt.py
llm_from_scratch/tokenizer/: bpe_tokenizer.py  data_prep.py  tokenizer_eval.py  train_tokenizer.py
llm_from_scratch/utils/: loss_and_metric.py
